Fix ansible kubernetes/k9s role
- Change k9s github repo url, set https as repository url
  to avoid failures with no permission to read

--- a/provisioners/ansible/roles/kubernetes/k9s/vars/main.yml
+++ b/provisioners/ansible/roles/kubernetes/k9s/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-k9s_repository: 'git@github.com:derailed/k9s.git'
+k9s_repository: 'https://github.com/derailed/k9s.git'
 k9s_checkout_dir: '/tmp/k9s'
 k9s_binary_dir: '{{ k9s_checkout_dir }}/execs'
 k9s_editor: 'vim'
