--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -21,6 +21,7 @@
     - { role: 'kubernetes/kubefwd', tags: 'kubefwd' }
     - { role: 'kubernetes/kubectx', tags: 'kubectx' }
     - { role: 'kubernetes/kubeshell', tags: 'kubeshell' }
+    - { role: 'kubernetes/kubeps1', tags: 'kubeps1' }
     - { role: 'hashicorp/vagrant', tags: 'vagrant' }
     - { role: 'hashicorp/terraform', tags: 'terraform' }
     - { role: 'hashicorp/vault', tags: 'hvault' }
