--- a/provisioners/ansible/roles/go/defaults/main.yml
+++ b/provisioners/ansible/roles/go/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-go_version: '1.18.1'
-go_checksum: 'b3b815f47ababac13810fc6021eb73d65478e0b2db4b09d348eefad9581a2334'
+go_version: '1.19.2'
+go_checksum: '5e8c5a74fe6470dd7e055a461acda8bb4050ead8c2df70f227e3ff7d8eb7eeb6'
 go_install_dir: '/usr/local/go'
 go_path: '{{ ansible_env.HOME }}/.go'
 go_modules:
@@ -14,4 +14,13 @@ go_modules:
     version: 'v0.1.10'
   - name: 'github.com/mkouhei/gosh'
     version: 'v0.2.3'
+  # IDE features / language server
+  - name: 'golang.org/x/tools/gopls'
+    version: 'latest'
+    # Debugger - Delve
+  - name: 'github.com/go-delve/delve/cmd/dlv'
+    version: 'v1.9.1'
+    # Linter - static analysis
+  - name: 'honnef.co/go/tools/cmd/staticcheck'
+    version: '2022.1'
 ...
