Add kubecolor ansible role
- Add kubecolor v0.0.20 installation as ansible role
- Update .gitignore
  - Exclude .vscode folder
- Update README.md
- Update provisioners.md
  - Add documentation regarding kubecolor

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -22,6 +22,7 @@
     - { role: 'kubernetes/kubectx', tags: 'kubectx' }
     - { role: 'kubernetes/kubeshell', tags: 'kubeshell' }
     - { role: 'kubernetes/kubeps1', tags: 'kubeps1' }
+    - { role: 'kubernetes/kubecolor', tags: 'kubecolor' }
     - { role: 'hashicorp/vagrant', tags: 'vagrant' }
     - { role: 'hashicorp/terraform', tags: 'terraform' }
     - { role: 'hashicorp/vault', tags: 'hvault' }
