--- a/provisioners/ansible/roles/system/bash_aliases/defaults/main.yml
+++ b/provisioners/ansible/roles/system/bash_aliases/defaults/main.yml
@@ -23,4 +23,6 @@ bash_aliases:
     command: 'netstat -tulanp'
   - alias: 'ghistory'
     command: 'history | grep'
+  - alias: 'kubectl'
+    command: 'kubecolor'
 ...
