--- a/tox.ini
+++ b/tox.ini
@@ -26,12 +26,11 @@ passenv =
     DEBUG
 sitepackages = False
 whitelist_externals =
-    find
+    bash
 deps = -r requirements.d/testenv.txt
 parallel_show_output = true
 commands =
-    - find . -type f -name "*.pyc" -delete
-    - find . -type d -name "__pycache__" -delete
+    - bash -c 'find {toxinidir} -type d -name "__pycache__" | xargs rm -rf'
     {envpython} -m pip check
 
 
