Hotfix provisioners - ansible ruby role
Add become: 'yes' (sudoer) when installing the bundler, change
user_install: 'no' to avoid issues with Gem path

--- a/provisioners/ansible/roles/ruby/tasks/main.yml
+++ b/provisioners/ansible/roles/ruby/tasks/main.yml
@@ -13,7 +13,8 @@
     state: 'present'
     version: '{{ ruby_bundler_version }}'
     norc: 'yes'
-    user_install: 'yes'
+    user_install: 'no'
+  become: 'yes'
   when: 'ruby_install_bundler | bool'
 
 - name: 'Install user configured gems'
