Add (new env) testing support to tox.ini
- Update tox.md documentation file
- Add requirements.d/tests.txt
  - Add pytest==7.3.1 pinned dependency
- Update .circleci/config.yml
  - Update CI command for parallel test execution
- Update tox.ini
  - Add virtualenv [testenv:tests]
  - Add option depends for [testenv:linters] and [testenv:tests]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - 'checkout'
       - run:
-          name: 'Run Continuous Integration tests'
-          command: 'tox'
+          name: 'Run Continuous Integration (linting, testing, ...)'
+          command: 'tox -p'
 workflows:
   on_commit:
     jobs:
