--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 project = Vagrantenv (Sandbox)
 minversion = 3.7.0
 skipsdist = true
-envlist = py3,linters
+envlist = pre-testenvs,linters,tests
 skip_missing_interpreters = true
 
 
@@ -31,18 +31,29 @@ deps = -r requirements.d/testenv.txt
 parallel_show_output = true
 commands =
     - bash -c 'find {toxinidir} -type d -name "__pycache__" | xargs rm -rf'
+    - bash -c 'find {toxinidir} -type d -name ".pytest_cache" | xargs rm -rf'
+    - bash -c 'find {toxinidir} -type d -name ".bundle" | xargs rm -rf'
     {envpython} -m pip check
 
 
 [testenv:linters]
 description = Execute all project linters
+depends = pre-testenvs
 deps = -r requirements.d/linters.txt
 commands =
     {envpython} -m pre_commit run {posargs:--all-files --verbose}
 
 
+[testenv:tests]
+description = Execute project test automation
+depends = pre-testenvs
+deps = -r requirements.d/tests.txt
+commands =
+    {envpython} -m pytest {posargs:-s -v}
+
+
 [testenv:docs]
-description = Project documentation
+description = Generate project documentation
 deps = -r requirements.d/docs.txt
 commands =
     {envpython} -m mkdocs serve {posargs}
