Hotfix - Update Dockefile dependencies
- Add make binary due to rubocop ~> json dependency
- Update docker/lint.sh to automatically detect os and platform arch
- Change ansible role ruby
  - Update ruby dependency with ruby-dev rather than ruby-full

--- a/provisioners/ansible/roles/ruby/defaults/main.yml
+++ b/provisioners/ansible/roles/ruby/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 ruby_dependencies:
-    - 'ruby-full'
+    - 'ruby-dev'
 ruby_install_bundler: true
 ruby_bundler_version: '2.3.23'
 ruby_install_user_gems: []
