Update tox.ini configuration file
- Update tox.ini [testenv:linters]
  - Add --show-diff-on-failure for pre-commit
  - Add hint if pre-commit installed as hook
- Update pytest command, force color output only if
  TTY enabled

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,8 @@ description = Execute all project linters
 depends = pre-testenvs
 deps = -r requirements.d/linters.txt
 commands =
-    {envpython} -m pre_commit run {posargs:--all-files --verbose}
+    {envpython} -m pre_commit run {posargs:--all-files --verbose --show-diff-on-failure}
+    {envpython} -c 'print("hint: run {envdir}/bin/pre-commit install to add checks as pre-commit hook")'
 
 
 [testenv:tests]
@@ -49,7 +50,7 @@ description = Execute project test automation
 depends = pre-testenvs
 deps = -r requirements.d/tests.txt
 commands =
-    {envpython} -m pytest {posargs:-s -v}
+    {envpython} -m pytest {tty:--color=yes} {posargs:-s -v}
 
 
 [testenv:docs]
