Update tox.ini, add tox requirements

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
 project = Vagrantenv (Sandbox)
-minversion = 3.7.0
 skipsdist = true
 envlist = pre-testenvs,linters,tests
 skip_missing_interpreters = true
+requires =
+    tox>3
+    virtualenv>20
 
 
 [testenv]
