Update README.md, chocolatey.config, kubeps1 role
- Change kubeps1 git repository URL
- Update chocolatey.config packages
  - Add vscode/1.72.2
  - Update python to 3.11.0
- Update README.md

--- a/provisioners/ansible/roles/kubernetes/kubeps1/vars/main.yml
+++ b/provisioners/ansible/roles/kubernetes/kubeps1/vars/main.yml
@@ -1,4 +1,4 @@
 ---
-kubeps1_repository: 'git@github.com:jonmosco/kube-ps1.git'
+kubeps1_repository: 'https://github.com/jonmosco/kube-ps1.git'
 kubeps1_checkout_dir: '/tmp/kubeps1'
 ...
