--- a/tools/windows/chocolatey.config
+++ b/tools/windows/chocolatey.config
@@ -5,7 +5,8 @@ https://github.com/chocolatey/choco/wiki/CommandsInstall#packagesconfig
 -->
 <packages>
   <package id="virtualbox" version="6.1.16" packageParameters="/NoDesktopShortcut" allowMultipleVersions="false"/>
-  <package id="python3" version="3.9.0"/>
+  <package id="python3" version="3.11.0"/>
   <package id="vagrant" version="2.2.19"/>
   <package id="sublimetext3" version="3.2.2"/>
+  <package id="vscode" version="1.72.2"/>
 </packages>
