Add support for primary disk resizing
- Update Vagrantfile to include disks method
- Update vagrant.yaml to include the new disks config
- Update lib/vagrant-host.rb with new disks method
- Update documentation, add disks.md section
- Update ansible roles, add new system/disks role

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
                 - 'System': 'vagrant/system.md'
                 - 'Provisioners': 'vagrant/provisioners.md'
                 - 'Synced Folders': 'vagrant/shared.md'
+                - 'Disks': 'vagrant/disks.md'
                 - 'Plugins': 'vagrant/plugins.md'
                 - 'Debugging': 'vagrant/debugging.md'
                 - 'Workflow': 'vagrant/workflow.md'
