--- a/provisioners/ansible/roles/repos/defaults/main.yml
+++ b/provisioners/ansible/roles/repos/defaults/main.yml
@@ -1,15 +1,9 @@
 ---
-repositories:
-  - name: 'vagrantenv'
-    src: 'git@github.com:theodore86/vagrantenv.git'
-    dest: '{{ ansible_env.HOME }}'
-    version: 'main'
-    pull: true
-    remote: 'origin'
-  - name: 'sublime'
-    src: 'git@github.com:theodore86/sublime.git'
-    dest: '{{ ansible_env.HOME }}'
-    version: 'master'
-    pull: true
-    remote: 'origin'
+# - name: 'vagrantenv'
+#   src: 'git@github.com:theodore86/vagrantenv.git'
+#   dest: '{{ ansible_env.HOME }}'
+#   version: 'main'
+#   pull: true
+#   remote: 'origin'
+repositories: []
 ...
