Add ansible role system/disks extra task
Add task to resize the partition when PV is resized using fdisk, the
parted ansible module doesn't work as expected

--- a/provisioners/ansible/roles/system/disks/defaults/main.yml
+++ b/provisioners/ansible/roles/system/disks/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 disks_dependencies:
   - 'lvm2'
+  - 'fdisk'
+disks_pv: '/dev/sda'
 disks_pvs: '/dev/sda3'
 disks_vg_name: 'ubuntu-vg'
 disks_lv_name: 'ubuntu-lv'
