--- a/provisioners/ansible/roles/go/defaults/main.yml
+++ b/provisioners/ansible/roles/go/defaults/main.yml
@@ -3,6 +3,7 @@ go_version: '1.19.2'
 go_checksum: '5e8c5a74fe6470dd7e055a461acda8bb4050ead8c2df70f227e3ff7d8eb7eeb6'
 go_install_dir: '/usr/local/go'
 go_path: '{{ ansible_env.HOME }}/.go'
+go_modules_enabled: false
 go_modules:
   - name: 'github.com/nektos/act'
     version: 'v0.2.26'
