--- a/provisioners/ansible/roles/jvm/groovy/tasks/main.yml
+++ b/provisioners/ansible/roles/jvm/groovy/tasks/main.yml
@@ -69,9 +69,9 @@
     groovy_installed_version.rc != 0
     or groovy_version != groovy_current_version
   notify:
-    - 'Check installed version'
-    - 'Set installed version'
-    - 'Verify installed version'
+    - 'Check Groovy installed version'
+    - 'Set Groovy installed version'
+    - 'Verify Groovy installed version'
 
 - name: 'Set GROOVY_HOME variable'
   template:
