--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ passenv =
     SKIP
     DEBUG
 sitepackages = False
-whitelist_externals =
+allowlist_externals =
     bash
 deps = -r requirements.d/testenv.txt
 parallel_show_output = true
