--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -199,4 +199,5 @@
                     - "kubecolor"
                     - "groovy"
                     - "vagrant"
+                    - "hadolint"
                 :skip_tags: []
