Update ansible common system role
Add package python3-venv when system initially boots up

--- a/provisioners/ansible/roles/common/system/defaults/main.yml
+++ b/provisioners/ansible/roles/common/system/defaults/main.yml
@@ -21,6 +21,7 @@ system_required_packages:
   - 'unzip'
   - 'ack-grep'
   - 'python3-tk'
+  - 'python3-venv'
   - 'deborphan'
   - 'tree'
   - 'lynx'
