Add ansible kubeshark role (API traffic viewer)
- Add ansible kubeshark role
- Update README.md
- Update extra_vars.yml with the latest kubeshark version
- Update playbook.yml to include the kubeshark
- Update vagrant.yaml to include in any installation the
  kubeshark tool

--- a/provisioners/ansible/playbook.yml
+++ b/provisioners/ansible/playbook.yml
@@ -23,6 +23,7 @@
     - { role: 'kubernetes/kubeshell', tags: 'kubeshell' }
     - { role: 'kubernetes/kubeps1', tags: 'kubeps1' }
     - { role: 'kubernetes/kubecolor', tags: 'kubecolor' }
+    - { role: 'kubernetes/kubeshark', tags: 'kubeshark' }
     - { role: 'hashicorp/vagrant', tags: 'vagrant' }
     - { role: 'hashicorp/terraform', tags: 'terraform' }
     - { role: 'hashicorp/vault', tags: 'hvault' }
